@@ -9,6 +9,7 @@
 .: WSM: BugFix: Fixed minor issues in Invoice Module (WSM-250)
 .: WSM: Task: Add input label in customers (WSM-253)
 .: WSM: Task: Add input label in promotions (WSM-252)
+.: WSM: BugFix: Set malaysia as default country (WSM-253)
 
 ---------------------------------------------
 - 2021-01-01                                -
